# bow-capital-hackathon

./: .gitignore  README.md  TEAM_PLAN.md  policyimprovement.md
.playwright-mcp/: page-2026-05-30T23-53-26-436Z.yml  page-2026-05-30T23-54-21-590Z.yml  page-2026-05-30T23-55-07-813Z.yml  page-2026-05-31T08-19-31-907Z.yml  page-2026-05-31T08-20-32-762Z.yml  page-2026-05-31T18-53-35-267Z.yml  page-2026-05-31T19-01-31-070Z.yml
combatos/: HOOK_NAV.md  HOOK_PERCEPTION.md  HOOK_RECON.md  HOOK_SWARM.md  __main__.py  config.py  orchestrator.py  pyproject.toml
combatos/bus/: image_router.py  image_ws_server.py  router.py  schema.py  ws_server.py
combatos/modules/: base.py  nav_module.py  perception_module.py  recon_module.py  ros_perception_module.py  ros_slam_module.py  swarm_module.py
combatos/state/: system_state.py
docs/: battlefield-parameters.md
frontend/: bunfig.toml  index.html  package.json  vite.config.ts
frontend/plugins/: trainService.ts
frontend/public/: policy.onnx
frontend/public/policies/defend-asset/: policy.onnx
frontend/public/policies/drone-vs-drone/: policy.onnx
frontend/public/policies/hunt-and-seek/: policy.onnx  policy.onnx.killed
frontend/public/policies/moving-target-track/: policy.onnx
frontend/public/policies/navigate-to-target/: policy.onnx
frontend/public/policies/search-and-interdict/: policy.onnx
frontend/public/policies/swarm-vs-swarm-race/: policy.onnx
frontend/scripts/: verify_local_sim.mjs
frontend/src/: App.css  App.tsx  index.css
frontend/src/combatos/: BootView.tsx  CombatOS.tsx  CommandView.tsx  ExpandedPanelView.tsx  GeoMinimap.tsx  LiveFrameCanvas.tsx  OpticView.tsx  VslamScene.tsx  combatos.css  slamGeo.ts  useCombatState.ts
frontend/src/gym/: BattlefieldParamsPanel.tsx  GymScenarioStage.tsx  TrainingDashboard.tsx  TrainingMetricsChart.tsx  battlefieldParams.ts  pybulletDemoConfig.ts  scenarios.ts  trainApi.ts
frontend/src/outcast-virus/: BootView.tsx  CommandView.tsx  ExpandedPanelView.tsx  GeoMinimap.tsx  LiveFrameCanvas.tsx  OpticView.tsx  OutcastVirus.tsx  SwarmHuntView.tsx  VslamScene.tsx  atoms.tsx  outcast-virus.css  panels.ts  slamGeo.ts  useOutcastVirusState.ts
frontend/src/panels/: CompositeScenePanel.tsx  PyBulletSimPanel.tsx  SlamTestPanel.tsx  SwarmPanel.tsx
frontend/src/swarm/: drone.ts  minimap.ts  obstacles.ts  policy.ts  sim.ts
outcast_virus/: HOOK_NAV.md  HOOK_PERCEPTION.md  HOOK_RECON.md  HOOK_SWARM.md  __main__.py  config.py  orchestrator.py  pyproject.toml
outcast_virus/bus/: image_router.py  image_ws_server.py  router.py  ws_server.py
outcast_virus/modules/: base.py  nav_module.py  perception_module.py  recon_module.py  ros_perception_module.py  ros_slam_module.py  swarm_module.py
outcast_virus/state/: fallback.py
perception/: .env.example  .env.jetson  .env.laptop  README.md  bus.py  camera_node.py  config.py  detector.py  export_trt.py  install.bat  main.py  priority.py  reid.py  requirements.txt  rosmain.py  setup_ros2.sh  setup_swap.sh  slam_sim.py  tracker.py  visualizer.py  vo.py
perception/devlogs/: 001-notes.md  001.md  002.md
pybullet_swarm_video/: 0_VRDemoSettings.txt  README.md  timings_0.json
pybullet_swarm_video copy/: ASSETS_NEEDED.md  README.md  pyproject.toml
pybullet_swarm_video copy/pybullet_swarm_video/: __init__.py  config.py  messages.py  perception_node.py  policies.py  record.py  run_demo.py  simulation.py
pybullet_swarm_video/pybullet_swarm_video/: bus_client.py  config.py  perception_node.py  run_demo.py  run_orchestrated_demo.py  simulation.py
ros2/: .gitignore
ros2/src/combatos_perception/: TEST_YOLOX_NODE.md  package.xml  setup.cfg  setup.py
ros2/src/combatos_slam_bridge/: package.xml  setup.cfg  setup.py
ros2/src/config/: imu_only.yaml  oak_d_lite.yaml  oak_stereo_imu.yaml
ros2/src/launch/: README.md  oak_d_lite.launch.py  oak_d_lite_rgb_driver.launch.py  oak_d_lite_stereo_driver.launch.py  oak_d_lite_stereo_slam.launch.py  oak_rgb_only.launch.py  oak_stereo_imu.launch.py  oak_stereo_imu_camera_only.launch.py
ros2/src/oak_stereo_imu_driver/: CMakeLists.txt  package.xml  plugins.xml
ros2/src/oak_stereo_imu_driver/config/: oak_stereo_imu_15fps.yaml  oak_stereo_imu_30fps.yaml
ros2/src/oak_stereo_imu_driver/include/oak_stereo_imu_driver/: imu_node_200hz.hpp
ros2/src/oak_stereo_imu_driver/scripts/: check_image_timing.py  check_imu_timing.py
ros2/src/oak_stereo_imu_driver/src/: imu_node_200hz.cpp  oak_pipeline.cpp  oak_stereo_imu_node.cpp
ros2/src/outcast_virus_perception/: TEST_YOLOX_NODE.md  package.xml  setup.cfg  setup.py
ros2/src/outcast_virus_perception/launch/: oak_yolox_perception.launch.py
ros2/src/outcast_virus_perception/outcast_virus_perception/: __init__.py  yolox_node.py
ros2/src/outcast_virus_perception/resource/: outcast_virus_perception
ros2/src/ros2_orb_slam3/: CMakeLists.txt  package.xml
swarm/: .gitignore  SWARM.md  __init__.py  backend.py  bus.py  drones_broll.py  env.py  env_config.py  eval.py  export_onnx.py  hunt_env.py  mappo.py  mock_train_publisher.py  models.py  obstacles.py  pybullet_renderer.py  pyproject.toml  scenarios.py  task_profiles.py  train.py  train_hunt_curriculum.py  train_service.py
swarm/artifacts/: drones_broll_smoke_trajectory.json
swarm/checkpoints/drone-vs-drone/: meta.json  params.json  train-events.ndjson
swarm/checkpoints/search-and-interdict/: meta.json  params.json  train-events.ndjson
swarm/tests/: test_pybullet_smoke.py
(+25 files in other folders)
