[project]
name = "outcast-virus-orchestrator"
version = "0.1.0"
description = "Outcast Virus integration spine — WebSocket bus, module lifecycle, system state"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
]

[tool.uv]
package = false

# Run from repo root:
#   uv run --project outcast_virus python -m outcast_virus
