[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pybullet-swarm-video"
version = "0.1.0"
description = "Standalone PyBullet prototype for tiled first-person drone surveillance video"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pybullet>=3.2.6",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "opencv-python-headless>=4.10",
    "websockets>=12.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["pybullet_swarm_video"]
